# BT_Client

./: README.md  torrent.txt
BT_Client/: BT_Client.vcxproj  BT_Client.vcxproj.filters  CMakeLists.txt  Source.cpp  a.out  a.torrent  hash.cpp  hash.h  torrent.cpp  torrent.h  x.cpp
BT_Client/src/: main.cpp
